# ign_robot

./: README.md
example/: CMakeLists.txt  package.xml
example/config/: ign_robot_config.yaml  omni_config.yaml
example/examples/: joy2angle.cpp
example/launch/: cart_example_velocity.launch.py  ign_robot.launch.py  omni.launch.py
example/urdf/: ign_robot.urdf  odm_simple.urdf
example/urdf/example/: test_cart_velocity_1m_z.xacro.urdf
example/xacro/: odm_common.xacro  odm_omni_wheel_set1.xacro  omni.xacro
ign_robot/: CMakeLists.txt  package.xml
ign_robot/config/: omni_config.yaml
ign_robot/examples/: joy2direct.cpp  joy2omni.cpp  joy2twist.cpp
ign_robot/launch/: cart_example_velocity.launch.py  ign_robot.launch.py  omni.launch.py
ign_robot/urdf/example/: cart.urdf
ign_robot/xacro/: odm_omni_wheel_set1.xacro  omni.xacro
