<?xml version="1.0"?>
<package format="2">
  <name>ign_robot</name>
  <version>0.4.1</version>
  <description>ign_ros2_control_demos</description>

  <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernandez</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/ignitionrobotics/ign_ros2_control/blob/main/README.md</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros2_control/issues</url>
  <url type="repository">https://github.com/ignitionrobotics/ign_ros2_control</url>

  <author>Alejandro Hernández</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <type>ament_cmake</type>
  </export>
</package>
